--- a/Index.html
+++ b/Index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <header class="cabecalho"> 
-        <img class="cabeallho-imagem" src="alurastart"
-        <h1>Imagem</h1>
-    <ul>
-        <li>Quero</li>
+        <img class="cabeallho-imagem" src="alurastart logo.pmg" alt="logo da alura">
+    <ul class="cabecalho-lista">
+        <li cabecalho-lista-item>Quero</li>
         <li>Treinar</li>
     </ul>
     </header>
